done, need to do some clean up

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 
 <div class="container">
     <header class="header">
-        <button>add card</button>
-        <button>sort cards</button>
+        <button id="add-card-btn">add card</button>
+        <button id="sort-cards-btn">sort cards</button>
     </header>
-    <div class="main">
-        <div class="card">333</div>
-        <div class="card">444</div>
+    <div id="card-items-container" class="main">
     </div>
     <div class="instructions">
         <p class="instructions-text">
@@ -32,6 +30,10 @@
 
 
 
+
+
+<script src="js/globals.js"></script>
+<script src="js/util.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
