prevent stack overflow

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 <script src="js/globals.js"></script>
-<script src="js/util.js"></script>
+<script src="js/utility.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
